--- a/src/index.html
+++ b/src/index.html
@@ -21,6 +21,8 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <app-root></app-root>
+  <div>
+    <app-root></app-root>
+  </div>
 </body>
 </html>
